squidfmt/src/snapshots/squidfmt__tests__parsing@error_bad_key_char.txt.snap
---
source: squidfmt/src/tests.rs
expression: "PreparedFmt::parse(&input)"
input_file: squidfmt/src/test_cases/parsing/error_bad_key_char.txt
---
Err(
    BadKeyChar(
        4,
        ' ',
    ),
)
