squidfmt/src/snapshots/squidfmt__tests__parsing@error_unterminated_closing_brace.txt.snap
---
source: squidfmt/src/tests.rs
expression: "PreparedFmt::parse(&input)"
input_file: squidfmt/src/test_cases/parsing/error_unterminated_closing_brace.txt
---
Err(
    UnmatchedOpeningBrace(
        10,
    ),
)
