squidfmt/src/snapshots/squidfmt__tests__parsing@keys_only.txt.snap
---
source: squidfmt/src/tests.rs
expression: "PreparedFmt::parse(&input)"
input_file: squidfmt/src/test_cases/parsing/keys_only.txt
---
Ok(
    PreparedFmt {
        segments: [
            Key(
                "key1",
            ),
            Key(
                "key2",
            ),
        ],
        keys: [
            "key1",
            "key2",
        ],
    },
)
