squidfmt/src/snapshots/squidfmt__tests__parsing@no_keys.txt.snap
---
source: squidfmt/src/tests.rs
expression: "PreparedFmt::parse(&input)"
input_file: squidfmt/src/test_cases/parsing/no_keys.txt
---
Ok(
    PreparedFmt {
        segments: [
            Literal(
                "Hello world",
            ),
        ],
        keys: [],
    },
)
