squidfmt/src/snapshots/squidfmt__tests__parsing@simple_keys.txt.snap
---
source: squidfmt/src/tests.rs
expression: "PreparedFmt::parse(&input)"
input_file: squidfmt/src/test_cases/parsing/simple_keys.txt
---
Ok(
    PreparedFmt {
        segments: [
            Key(
                "key1",
            ),
            Literal(
                "_",
            ),
            Key(
                "key2",
            ),
            Literal(
                "_",
            ),
            Key(
                "key3",
            ),
        ],
        keys: [
            "key1",
            "key2",
            "key3",
        ],
    },
)
